assets/css/styles.css
/* ... */
@media (max-width: 599px) {

    /* Header */
    .desktop-header {
        display: none;
    }

    /* Mobile Header */
    .mobile-header {
        display: flex;
    }

    /* Hero Section */

    .hero_section {
        position: relative;
        margin: 20px;
    }

    .hero_section .hero_text {
        background-image: url(../images/weld_hero.png);
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        width: 100%;
        padding: 20px;
        box-shadow: 0 350px inset #4a86fd55;
    }

    .hero_section .hero_text .hero_button_bottom {
        padding: 10px;
        font-size: 14px;
    }

    .hero_section .hero_image {
        display: none;
    }

    /* Product Categories */

    .product_categories h2 {
        font-size: 17px;
    }

    .product_categories .categories_container {
        flex-flow: row wrap;
        font-size: 14px;
    }

    .product_categories .categories_container .category_card {
        width: 280px;
        /* max-width: calc(30% - 20px); */
    }

    .product_categories .categories_container .category_card .card_image {
        width: 50%;
    }

    .product_categories .categories_container .category_card .card_image img {
        width: 125px;
        height: 100%;
    }

    .product_categories .categories_container .category_card .card_text {
        gap: 5px;
    }

    .product_categories .categories_container .category_card .card_text h3 {
        font-size: 15px;
    }

    /* ---- */

    /* Why Choose Us */
    .why_choose_us h4 {
        font-size: 16px;
    }

    .why_choose_us .choose_card_container {
        flex-wrap: wrap;
        gap: 15px;
        /* font-size: 14px; */
    }

    .why_choose_us .choose_card_container .choose_card {
        max-width: 80%;
    }

    /* ---- */

    /* Footer */

    footer {
        border-top-left-radius: 125px;
    }

    footer .footer_top {
        flex-direction: column;
    }

    footer .footer_top .footer_left {
        width: 80%;
    }

    footer .footer_top .footer_right {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        gap: 10px;
    }

    footer .footer_top .footer_right .footer_links a {
        font-size: 14px;
    }

    footer .footer_top .footer_right .footer_links p {
        font-size: 14px;
    }

    footer .footer_bottom {
        padding: 20px 0 15px 15px;
        margin: 0;
        font-size: 14px;
        display:  flex;
        flex-direction: column;
        gap: 15px;
    }

    /* Products Page */

    .products_grid,
    .related_products .products_grid {
        grid-template-columns: repeat(1, 1fr);
    }

    /* ---- */

    /* Single Product Page */

    .product_details_page {
        flex-direction: column;
        align-items: center;
        gap: 20px;
        margin: 20px;
    }

    .product_details_image {
        width: 100%;
    }

    .related_products {
        padding: 20px;
    }

    /* ---- */

    /* About Us Page */

    .about {
        padding: 5%;
        flex-direction: column;
    }

    .about .about_left img {
        display: none;
    }

    .about .about_right .about_cards {
        gap: 15px;
        flex-wrap: wrap;
    }

    /* ---- */

    /* Contact Page */

    .contact {
        padding: 15px 0;
    }

    .contact .contact_form {
        width: 100%;
        padding: 20px;
        margin: 15px;
        gap: 10px;
    }

    .contact .contact_form .contact_heading {
        font-size: 18px;
    }

    .contact .contact_form .names {
        flex-direction: column;
    }
}

